test/classes/ferguson/delete-free/owned-return-blank-arg-value.good
owned-return-blank-arg-value.chpl:10: In function 'returnByValue':
owned-return-blank-arg-value.chpl:12: error: implicit copy-initialization invoked for a type that does not allow it
